[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["3rfaan <28968837+3rfaan@users.noreply.github.com"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/3rfaan/courses/Rust/WebAssembly/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
