[package]
name = "actionkv"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1"
byteorder = "1.2"
crc = "1.7"
serde = { version = "1.0.219", features = ["derive"] }

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"
